--- a/trees/CMakeLists.txt
+++ b/trees/CMakeLists.txt
@@ -1,5 +1,8 @@
 add_library(Trees
-            src/tree.cpp src/leaf.cpp include/leaf.h)
+            src/tree.cpp
+            src/leaf.cpp
+            src/binaryleaf.cpp
+            src/bst.cpp)
 
 target_include_directories(Trees PUBLIC
         include)
